--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,8 @@
  * file per style scope.
  *
  *= require_self
+ *= require AdminLTE.min
+ *= require _all-skins.min
  */
   @import "bootstrap";
   @import "semantic-ui";
