--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
 	</head>
 	<body class="fixed skin-green">
 	<div class="wrapper">
-			<%= yield %>
+		<%= render partial: "shared/header" %>
+		<%= yield %>
 	</div>
 	</body>
 </html>
