--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 	<body class="fixed skin-green">
 	<div class="wrapper">
 		<%= render partial: "shared/header" %>
+		<%= render partial: "shared/side_nav" %>
 		<%= yield %>
 	</div>
 	</body>
