--- a/app/views/shared/_side_nav.html.erb
+++ b/app/views/shared/_side_nav.html.erb
@@ -4,7 +4,7 @@
 			<ul class="nav sidebar-menu">
 				<li class="header"><center>Models</center></li>
 				<li class=""><a href="/"><i class="fa fa-circle-o"></i>Dashboard</a></li>
-				<li class=""><%= link_to "Company Profile", companyprofiles_path %></li>
+				<li class=""><%= link_to "Company Profile", companies_path %></li>
 			</ul>
 		</div>
 	</div>
