--- a/app/views/shared/_side_nav.html.erb
+++ b/app/views/shared/_side_nav.html.erb
@@ -1,11 +1,16 @@
 <aside class="main-sidebar">
-	<div class="slimScrollDiv" style="position:relative; overflow:hidden; width: auto; height: 110px;">
-		<div id="scrollspy" class="sidebar" style="height: 110px; overflow: hidden; width: auto;">
-			<ul class="nav sidebar-menu">
-				<li class="header"><center>Models</center></li>
-				<li class=""><a href="/"><i class="fa fa-circle-o"></i>Dashboard</a></li>
-				<li class=""><%= link_to "Company Profile", companyprofiles_path %></li>
-			</ul>
-		</div>
-	</div>
+
+	<div style="position: relative; overflow: hidden; width: auto; height: 623px;" class="slimScrollDiv"><div style="height: 623px; overflow: hidden; width: auto;" class="sidebar" id="scrollspy">
+
+
+	  <ul class="nav sidebar-menu">
+	    <li class="header">MODULES</li>
+	    <li class=""><a href="/"><i class="dashboard icon"></i> My Dashboard</a></li>
+	    <li class=""><a href=""><i class="users icon"></i> My Employee</a></li>
+	    <li class=""><a href=""><i class="shipping icon"></i> My Products</a></li>
+	    <li class=""><a href=""><i class="in cart icon"></i></i> My Shop</a></li>
+	    <li class=""><a href="/companies"><i class="settings icon"></i> My Store</a></li>
+
+	  </ul>
+	</div><div style="background: rgba(0, 0, 0, 0.2) none repeat scroll 0% 0%; width: 3px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 623px;" class="slimScrollBar"></div><div style="width: 3px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51) none repeat scroll 0% 0%; opacity: 0.2; z-index: 90; right: 1px;" class="slimScrollRail"></div></div>
 </aside>
