--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,13 +1,7 @@
 <header class="main-header">
 	<a class="logo" href="/">
-		<span class="logo-mini">
-			<b>POS</b>
-			sit
-		</span>
-
 		<span class="logo-lg">
-			<b>POS</b>
-			sit
+			<img src="/assets/logo.png" style="max-height: 60px;margin-top: -2px;"></img>
 		</span>
 	</a>
 
@@ -15,8 +9,7 @@
 
 		<div class="navbar-custom-menu">
 			<ul>
-				<li></li>
-				<li></li>
+
 			</ul>
 		</div>
 	</nav>
