item category and item type crud

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -63,6 +63,7 @@
           </div>
         </div>
         <%= link_to "Add Company Info", new_company_path, class: "btn btn-success"  %>
+        <%= link_to "Management", management_item_categories_path %>
       </div>
     </div>
   </section>
