--- a/app/views/management/item_categories/_form.html.erb
+++ b/app/views/management/item_categories/_form.html.erb
@@ -1,25 +1,17 @@
-
-						
 <section class="content-header">
-	<h1>Information To Add:</h1> 
+	<h1>Items To Add:</h1> 
 </section>
 	<section class="content">
 		<div class="well">
 			<div class="box box-success">
-				<%= simple_form_for @company, defaults: { wrapper_html: { class: 'form-group' }, input_html: {class: 'form-control'} }, html: { multipart: true, novalidate: true } do |f| %>
+				<%= simple_form_for [:management, @item_category], defaults: { wrapper_html: { class: 'form-group' }, input_html: {class: 'form-control'} }, html: { multipart: true, novalidate: true } do |ic| %>
 					<form role="form">
 						<div class="box-body">
 							<div class="form-group">
-							<%= f.input :company_name %>
-							</div>
-								<div class="form-group">
-								<%= f.input :website %>
+							<%= ic.input :name %>
 							</div>
 							<div class="form-group">
-								<%= f.input :telephone %>
-							</div>
-							<div class="form-group">
-								<%= f.input :address %>
+								<%= ic.input :description %>
 							</div>
 						</div>
 						<div class="box-footer">
