--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,13 +4,7 @@
 			<img src="/assets/logo.png" style="max-height: 60px;margin-top: -2px;"></img>
 		</span>
 	</a>
+	<nav class="navbar navbar-static-top" role="navigation">
 
-	<nav class="navbar navbar-static-top">
-
-		<div class="navbar-custom-menu">
-			<ul>
-
-			</ul>
-		</div>
 	</nav>
 </header>
