--- a/app/views/management/item_types/index.html.erb
+++ b/app/views/management/item_types/index.html.erb
@@ -1,7 +1,7 @@
  <section class="content-header">
    <h1>Item Types  |<small>Control Panel</small></h1>
 </section>
-<br>
+  <br>
   <section class="content">
     <div class="well">
      <%= link_to "Add Item Types", new_management_item_type_path, class: "btn btn-success" %>
@@ -12,6 +12,7 @@
           <tr>
             <th>Name</th>
             <th>Description</th>
+            <th>Category</th>
             <th>Actions</th>
           </tr>
         </thead>
@@ -20,6 +21,7 @@
             <tr>
                 <td><%= it.name %></td>
                 <td><%= it.description %></td>
+                <td><%= it.try( :item_category).try (:name) %></td>
                 <td>
                   <%= link_to "Show", management_item_type_path(it.id), class: "btn btn-success btn-s" %>
                   <%= link_to "Edit", edit_management_item_type_path(it.id), class: "btn btn-primary btn-s" %>
