--- a/app/views/management/companies/_form.html.erb
+++ b/app/views/management/companies/_form.html.erb
@@ -4,7 +4,7 @@
 	<section class="content">
 		<div class="well">
 			<div class="box box-success">
-				<%= simple_form_for @company, defaults: { wrapper_html: { class: 'form-group' }, input_html: {class: 'form-control'} }, html: { multipart: true, novalidate: true } do |f| %>
+				<%= simple_form_for [:management, @company], defaults: { wrapper_html: { class: 'form-group' }, input_html: {class: 'form-control'} }, html: { multipart: true, novalidate: true } do |f| %>
 					<form role="form">
 						<div class="box-body">
 							<div class="form-group">
