--- a/app/views/management/companies/index.html.erb
+++ b/app/views/management/companies/index.html.erb
@@ -1,5 +1,6 @@
 <section class="content-header">
 <h1>Company Profile</h1>
+
 <!-- dito ilalagay yung logo o avatar na iaaupload -->
 </section>
 <section class="content">
@@ -10,17 +11,21 @@
           <h3 class="box-title">About Us</h3>
         </div>
         <div class="box-body">
+        <% @companies.each do |company| %>
+          <strong><i class="fa fa-book margin-r-5"></i>  Company</strong>
+           <br> <%= company.company_name %>
+          <hr>
           <strong><i class="fa fa-book margin-r-5"></i>  Website</strong>
-          <!-- /dito ilalagay yung ilalagay na website huhugutin sa add -->
+            <br><%= company.website %>
           <hr>
           <strong><i class="fa fa-map-marker margin-r-5"></i> Location</strong>
-          <!-- /dito ilalagay yung ilalagay na address huhugutin sa add -->
+           <br> <%= company.address %>
           <hr>
           <strong><i class="fa fa-pencil margin-r-5"></i> Telephone number</strong>
-          <!-- /dito ilalagay yung ilalagay na telephone number huhugutin sa add -->
+            <br><%= company.telephone %>
           <hr>
           <strong><i class="fa fa-file-text-o margin-r-5"></i> Notes</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam fermentum enim neque.</p>
+          <br><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam fermentum enim neque.</p>
         </div>
       </div>
     </div>
@@ -28,8 +33,6 @@
       <div class="nav-tabs-custom">
         <ul class="nav nav-tabs">
           <li class="active"><a href="#activity" data-toggle="tab">Activity</a></li>
-          <li><a href="#timeline" data-toggle="tab">Timeline</a></li>
-          <li><a href="#settings" data-toggle="tab">Settings</a></li>
         </ul>
         <div class="tab-content">
           <div class="active tab-pane" id="activity">
@@ -61,46 +64,16 @@
           </div>
         </div>
       </div>
-      <%= link_to "Add Company Info", new_company_path, class: "btn btn-success"  %>
-      <%= link_to "Item Categories", management_item_categories_path, class: "btn btn-success" %>
-      <%= link_to "Item Types", management_item_types_path, class: "btn btn-success" %>
+        <% if (Company.count == 0) %>
+        <%= link_to "Add Company Info", new_management_company_path(company.id), class: "btn btn-primary btn-s" %>
+        <%= link_to "Edit Company Info", edit_management_company_path(company.id), class: "btn btn-primary btn-s" %>
+        <%= link_to "Category", management_item_types_path, class: "btn btn-primary btn-s" %>
+        <% else %>
+        <%= link_to "Edit Company Info", edit_management_company_path(company.id), class: "btn btn-primary btn-s" %>
+        <% end %>
+      <% end %>
     </div>
   </div>
 </section>
-
-
-<!-- 
-
-<div class="container">
-  <div class="well">
-  <div class="row">
-    <div class="col-md-2">
-    </div>
-    <div class="col-md-10">
-    <div class="ui form">
-      <h1 align="center">Company</h1>
-      <table class="table hp-table table-splited">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Action</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @companies.each do |c| %>
-            <tr>
-                <td><%= c.company_name %></td>
-                <td>
-                  <%= link_to "Show", company_path(c.id), class: "btn btn-success btn-s" %>
-                  <%= link_to "Edit", edit_company_path(c.id), class: "btn btn-primary btn-s" %>
-                  <%= link_to "Delete", company_path(c.id), data: { :confirm => "Are you sure?"}, :method => :delete, class: "btn btn-warning btn-s" %>
-                </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
-</div> -->
+          
+    
