--- a/app/views/shared/_side_nav.html.erb
+++ b/app/views/shared/_side_nav.html.erb
@@ -6,7 +6,7 @@
 	    <li class=""><a href="/management/employees"><i class="users icon"></i> My Employee</a></li>
 	    <li class=""><a href=""><i class="shipping icon"></i> My Products</a></li>
 	    <li class=""><a href=""><i class="in cart icon"></i></i> My Shop</a></li>
-	    <li class=""><a href="/companies"><i class="settings icon"></i> My Store</a></li>
+	    <li class=""><a href="/management/companies"><i class="settings icon"></i> My Store</a></li>
 	  </ul>
 	</div><div style="background: rgba(0, 0, 0, 0.2) none repeat scroll 0% 0%; width: 3px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 623px;" class="slimScrollBar"></div><div style="width: 3px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51) none repeat scroll 0% 0%; opacity: 0.2; z-index: 90; right: 1px;" class="slimScrollRail"></div></div>
 </aside>
