--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,13 +9,13 @@
 		<div class="col-lg-3 col-xs-6">
 			<div class="small-box bg-aqua">
 				<div class="inner">
-					<h3>100</h3>
+					<h3><%= Item.count %></h3>
 					<p>Products</p>
 				</div>
 				<div class="icon">
 					<i class="shipping icon" style="top:50px;"></i>
 				</div>
-				<a class="small-box-footer" href="#">
+				<a class="small-box-footer" href="/management/items">
 					More Info<i class="fa fa-arrow-circle-right"></i>
 				</a>
 			</div>
@@ -37,13 +37,13 @@
 		<div class="col-lg-3 col-xs-6">
 			<div class="small-box bg-yellow">
 				<div class="inner">
-					<h3>100</h3>
+					<h3><%= Employee.count %></h3>
 					<p>Employee</p>
 				</div>
 				<div class="icon">
 					<i class="users icon" style="top:50px;"></i> 
 				</div>
-				<a class="small-box-footer" href="#">
+				<a class="small-box-footer" href="/management/employees">
 					More Info<i class="fa fa-arrow-circle-right"></i>
 				</a>
 			</div>
