--- a/app/views/shared/_side_nav.html.erb
+++ b/app/views/shared/_side_nav.html.erb
@@ -4,7 +4,7 @@
 	    <li class="header">MODULES</li>
 	    <li class=""><a href="/"><i class="dashboard icon"></i> My Dashboard</a></li>
 	    <li class=""><a href="/management/employees"><i class="users icon"></i> My Employee</a></li>
-	    <li class=""><a href=""><i class="shipping icon"></i> My Products</a></li>
+	    <li class=""><a href="/management/items"><i class="shipping icon"></i> My Products</a></li>
 	    <li class=""><a href=""><i class="in cart icon"></i></i> My Shop</a></li>
 	    <li class=""><a href="/companies"><i class="settings icon"></i> My Store</a></li>
 	  </ul>
