--- a/app/views/management/companies/index.html.erb
+++ b/app/views/management/companies/index.html.erb
@@ -1,6 +1,9 @@
 <section class="content-header">
 <h1>Company Profile</h1>
-
+        <% if (Company.count == 0) %>
+                  <%= link_to "Add Company Info", new_management_company_path, class: "btn btn-primary btn-s" %>
+          <% else %>
+        <% end %>
 <!-- dito ilalagay yung logo o avatar na iaaupload -->
 </section>
 <section class="content">
@@ -26,13 +29,8 @@
           <hr>
           <strong><i class="fa fa-file-text-o margin-r-5"></i> Notes</strong>
           <br><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam fermentum enim neque.</p>
-        <% if (Company.count == 0) %>
-        <%= link_to "Add Company Info", new_management_company_path(company.id), class: "btn btn-primary btn-s" %>
+
         <%= link_to "Edit Company Info", edit_management_company_path(company.id), class: "btn btn-primary btn-s" %>
-        <%= link_to "Category", management_item_types_path, class: "btn btn-primary btn-s" %>
-        <% else %>
-        <%= link_to "Edit Company Info", edit_management_company_path(company.id), class: "btn btn-success btn-s" %>
-        <% end %>
       <% end %>
         </div>
       </div>
